<resources>
    <string name="app_name">Expert Plant App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_soil">Soil Data</string>
    <string name="title_plant">Plant Data</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_soil">Add new soil</string>
    <string name="add_plant">Add new plant</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="title_favorite">Favorite</string>
    <string name="what_is">What is Expert Plant App ?</string>
    <string name="explain_app">Expert Plant App is an mobile application that help you to identify what the most suitable plant for cultivate in your area based on environmental factor with knowledge acquired from experts.</string>
    <string name="check">Check My Recomendation Plant</string>
    <string name="environmental">Environmental Based Factors</string>
    <string name="type_soil">Type of Soils</string>
    <string name="form">Input Form</string>
    <string name="fill_form">Fill in this form with the most appropriate data based on your environmental conditions !</string>
    <string name="altitude">Altitude</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="rainfall">Rainfall</string>
    <string name="submit">Submit</string>
    <string name="check_result">Check The Result</string>
    <string name="title_check">Check</string>
    <string name="mdpl">mdpl</string>
    <string name="percent">%</string>
    <string name="mmyear">mm/year</string>
    <string name="celcius">celcius</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="certainty_level">Certainty Level</string>
    <string name="certain_form">Fill in the form below with your certain level in the previous answer.</string>
    <string name="certain_altitude">How sure are you for the altitude data ?</string>
    <string name="certain_temperature">How sure are you for the temperature data ?</string>
    <string name="certain_humidity">How sure are you for the humidity data ?</string>
    <string name="certain_rainfall">How sure are you for the rainfall data ?</string>
    <string name="certain_soil">How sure are you for the soil data ?</string>
    <string name="logout">Logout</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register_desc">Welcome to the Expert Plant App. If this is your first time using this application, please register your account with the valid email address !</string>
    <string name="login_desc">Welcome back to the Expert Plant App. Please login with your existing account !</string>
    <string name="select_soil">Select Soil</string>
    <string name="title_result">Here’s Yours Recommendation Plant</string>
    <string name="explain_result">The result of recommendation plant that most suitable based on your environmental condition are shown in the following list :</string>
    <string name="percetage">Certainty Percentage :</string>
    <string name="species">Species</string>
    <string name="benefit">Plant Benefits</string>
    <string name="dots"> : </string>
    <string name="characteristics">Environmental Characteristics</string>
    <string name="menu_favorite">Favorite Menu</string>
    <string name="favorite_plant">Favorite Plants</string>

</resources>