<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.plant.PlantActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_plant"
            android:scaleType="centerCrop"
            android:src="@color/primaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/bg_certainty">

            <TextView
                android:id="@+id/tv_score"
                style="@style/TextMedium"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/certainty_level"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_species"
        style="@style/TextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/species"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/bg_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_species">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                style="@style/TextMedium"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/characteristics" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="110dp"
                        android:text="@string/altitude"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/TextSmall"
                        android:id="@+id/tv_altitude"
                        android:text="@string/altitude" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="110dp"
                        android:text="@string/temperature"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/TextSmall"
                        android:id="@+id/tv_temperature"
                        android:text="@string/temperature" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="110dp"
                        android:text="@string/humidity"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/TextSmall"
                        android:id="@+id/tv_humidity"
                        android:text="@string/humidity" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="110dp"
                        android:text="@string/rainfall"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/TextSmall"
                        android:id="@+id/tv_rainfall"
                        android:text="@string/rainfall" />
                </TableRow>

            </TableLayout>

            <TextView
                style="@style/TextMedium"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/TextSmall"
                android:layout_marginVertical="8dp"
                android:text="@string/desc" />

            <TextView
                style="@style/TextMedium"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/benefit" />

            <TextView
                android:id="@+id/tv_benefit"
                style="@style/TextSmall"
                android:layout_marginVertical="8dp"
                android:text="@string/benefit" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>